# Fanuc_control_interface_PARI

./: CMakeLists.txt
doc/: Doxyfile.in  mainpage.dox
server/: CMakeLists.txt  interface.glade~
server/doc/: doxygen_2.css  mainpage.dox
server/src/: auxfuncs.c  myserver.h  prototypes.h  server.c
server/srcmyutils/: myutils.h  pcolor.c  prototypes.h
src/: callbacks.c  genproto2.sh  interface.glade  interface.glade~  main.c  myf.c  myf.h  prototypes.h
srcmyutils/: myutils.h  pcolor.c  prototypes.h
